[metadata]
name = java-utilities
description = Java utilities
long_description = file: README-pypi.md
long_description_content_type = text/markdown
version = attr:java_utilities.__version__
url = https://github.com/devinrsmith/java-utilities
project_urls =
    Source Code = https://github.com/devinrsmith/java-utilities
    Bug Tracker = https://github.com/devinrsmith/java-utilities/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
keywords = java, utility
author = Devin Smith
author_email = devinsmith@deephaven.io
platforms = any

[options]
package_dir=
    =src/main/python
packages=find:

[options.packages.find]
where=src/main/python

[options.package_data]
java_utilities._jars =
    *.jar

[options.entry_points]
console_scripts =
    java-home = java_utilities._entrypoints:java_home
    java_home = java_utilities._entrypoints:java_home
    java-property = java_utilities._entrypoints:java_property
    java_property = java_utilities._entrypoints:java_property

[flake8]
max-line-length = 88
extend-ignore = E203
